# Dynamic-Economy-For-Games

./: .gitignore  README.md  Thumbs.db  index.html  params.json
DEFG_VC9/: DEFG.sln
DEFG_VC9/AI/: BaseGameEntity.h
DEFG_VC9/Project/: VSmarket.vcproj  defg.vcproj
DEFG_VC9/Project/Debug/: BuildLog.htm  vc90.idb
DEFG_VC9/Project/Release/: BuildLog.htm  mt.dep  vc90.idb
Examples/Buckland_AI/: BaseGameEntity.h  UpgradeLog.XML  WestWorldWithMessaging.vcproj  output.txt
Examples/Buckland_AI/Release/: BuildLog.htm  mt.dep  vc90.idb
Examples/Ex1/: Ex1.cpp  Ex1.vcproj
Examples/Ex1/Ex1/: Ex1.vcproj  ReadMe.txt  stdafx.cpp
NidoMarket/AI/: Miner.h  MinerOwnedStates.cpp  MinerOwnedStates.h
NidoMarket/VSmarket/: ReadMe.txt  VSmarket.cpp  VSmarket.vcproj  stdafx.cpp
NidoMarket/VSmarket/Release/: BuildLog.htm  mt.dep  vc90.idb
VegaMarket/AI/: StateMachine.h
VegaMarket/VSmarket/: VSmarket.vcproj
VegaMarket/VSmarket/Release/: mt.dep  vc90.idb
VegaMarket_VC9/: VegaMarket.sln
VegaMarket_VC9/AI/: AdminAI.h  MessageDispatcher.cpp
VegaMarket_VC9/VSmarket/: VSmarket.cpp  VSmarket.vcproj
data/: CargoType.xml  _1_master_part_list.csv  _2_master_part_list.csv  marketLib.xml  master_part_list.csv
src/: Base.hpp  Cargo.cpp  Cargo.hpp  Factory.cpp  XMLNode.cpp  XMLNode.hpp
src/common/: common.cpp  common.h
src/cppunit/: Makefile.am
src/cppunit/src/cppunit/: Makefile.am  TestAssert.cpp  TestCase.cpp  TestRegistry.cpp  TestSuite.cpp  TypeInfoHelper.cpp  TypeInfoHelper.h
src/cppunit/src/cppunit/extensions/: TestFactoryRegistry.cpp
(+13 files in other folders)
